<resources>
    <string name="yashlang">YaShlang</string>
    <string name="yashlang_search">YaShlang: history</string>
    <string name="yashlang_history">YaShlang: history</string>
    <string name="yashlang_starred">YaShlang: faves</string>
    <string name="yashlang_playlists">YaShlang: channels and playlists</string>
    <string name="yashlang_view_playlist">YaShlang: channel or playlist</string>
    <string name="yashlang_add_playlist">YaShlang: add channel or playlist</string>
    <string name="yashlang_search_playlist">YaShlang: search channel or playlist</string>
    <string name="yashlang_blacklist">YaShlang: blacklist</string>
    <string name="search">Search</string>
    <string name="add_new_playlist">Add new playlist</string>
    <string name="failed_to_load_list">Failed to load playlist</string>
    <string name="reload">Reload</string>
    <string name="add">Add</string>
    <string name="adding_playlist">Adding playlist</string>
    <string name="retry">Retry</string>
    <string name="nothing_blacklisted">Nothing blacklisted</string>
    <string name="add_playlist">Add playlist</string>
    <string name="blacklist">Blacklist</string>
    <string name="configure">Configure</string>
    <string name="history">History</string>
    <string name="starred">Faves</string>
    <string name="search_video">search video</string>
    <string name="channel_or_playlist_name">channel or playlist name</string>
    <string name="go_back">Go back</string>
    <string name="prev_video">prev</string>
    <string name="delete">Delete</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="no_new_items_in_playlist">No new items in this playlist so far</string>
    <string name="check_for_new_items">Check for new items</string>
    <string name="channel_or_playlist_url">channel or playlist url</string>
    <string name="filter">filter</string>
    <string name="add_to_blacklist">Block</string>
    <string name="copy_video_url">Copy video url</string>
    <string name="copy_playlist_url">Copy playlist url</string>
    <string name="tab_item_playlist">Playlist</string>
    <string name="tab_item_new">NEW</string>
    <string name="delete_playlist_title">Really delete playlist?</string>
    <string name="delete_playlist_message">Items from this playlist will also go away from starred list and history</string>
    <string name="adding_playlist_new_items">Adding new items to playlist</string>
    <string name="copy_playlist_name">Copy playlist name</string>
    <string name="copy_video_name">Copy video name</string>
    <string name="video_is_blacklisted">Video is blocked. Go to Settings > Blacklist to undo.</string>
    <string name="copied">copied</string>
    <string name="blacklist_video_title">Block this video?</string>
    <string name="blacklist_video_message">The video will be added to blacklist. Go to Settings > Blacklist to undo.</string>
    <string name="yashlang_add_recommended_playlists">YaShlang: add recommended channels and playlists</string>
    <string name="add_recommended_playlists">Add recommended</string>
    <string name="skip">Skip</string>
    <string name="add_playlists">Add playlists</string>
    <string name="collection_is_empty">You have no videos in collection. Add or enable channels or playlist.</string>
    <string name="configure_playlists">Configure channels and playlists</string>
    <string name="playlist_list_is_empty">You have no playlists or channels. Add channel or playlist.</string>
    <string name="failed_to_load_video">Problem loading video :(</string>
    <string name="play_results">Play results</string>
    <string name="nothing_starred">Nothing is starred ★</string>
    <string name="nothing_in_history">Nothing in history</string>
    <string name="play_all">Play all</string>
    <string name="nothing_to_play">Nothing to play</string>
    <string name="pt_or_yt">(PeerTube or YT)</string>
    <string name="failed_to_load_new_items">Failed to load new items</string>
    <string name="tab_item_playlists">Playlists</string>
    <string name="add_all">Add all</string>
    <string name="added_n_items">Added %s items</string>
    <string name="no_items_in_playlist">No items in this playlist</string>
    <string name="yashlang_playlist">YaShlang: channel or playlist</string>
    <string name="playlists">Playlists</string>
    <string name="play_all_shuffle">Play all (shuffle)</string>
    <string name="play_results_shuffle">Play results (shuffle)</string>
    <string name="play_in_playlist">Play in playlist</string>
    <string name="play_in_playlist_shuffle">Play in playlist (shuffle)</string>
    <string name="tab_item_profiles">Profiles</string>
    <string name="enable_all">Enable ALL</string>
    <string name="disable_all">Disable ALL</string>
    <string name="disble_all_yt">Disable all YouTube</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="add_profile">Add profile</string>
    <string name="yashlang_edit_profile">YaShlang: edit profile</string>
    <string name="delete_profile_title">Delete profile: \'%s\'?</string>
    <string name="profile_is_deleted">Profiled is deleted: \'%s\'</string>
    <string name="delete_profile_message">Settings for this profile would be deleted. Playlists and videos won\'t be affected at all.</string>
    <string name="new_profile_name">New profile</string>
    <string name="profile_name">profile name</string>
    <string name="profile_is_saved">Profile is saved: \'%s\'</string>
    <string name="add_to_enabled">Add to enabled</string>
    <string name="applied_profile">Applied profile: \'%s\'</string>
    <string name="enabled_from_profile">Enabled playlists from profile: \'%s\'</string>
    <string name="enabled_all">Enabled ALL playlists</string>
    <string name="disabled_all">Disabled ADD playlists</string>
    <string name="disabled_all_yt">Disabled all YoutTube playlists</string>
    <string name="export_to_file">Export to file</string>
    <string name="export_playlist_list">Export playlist list</string>
    <string name="export_playlist_items">Export playlist items</string>
    <string name="export_starred">Export starred</string>
    <string name="export_only_enabled_playlists">only enabled playlists</string>
    <string name="yashlang_export">YaShlang: export</string>
    <string name="export_data">Export data</string>
    <string name="export_playlist_items_names">playlist items names</string>
    <string name="export_playlist_items_urls">playlist items urls</string>
    <string name="export_ytdl_script">youtube-dl script</string>
    <string name="saved_to_file">Saved to file</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="save_dir">Save dir</string>
    <string name="export_blacklist">Export blacklist</string>
    <string name="export_skip_blocked">skip blocked</string>
    <string name="export_markdown">Markdown</string>
    <string name="export_profiles">Export profiles</string>
    <string name="sort_by">Sort order</string>
    <string name="sort_by_url_asc">by url (a → z)</string>
    <string name="sort_by_url_desc">by url (z → a)</string>
    <string name="sort_by_name_asc">by name (A → Z)</string>
    <string name="sort_by_name_desc">by name (Z → A)</string>
    <string name="sort_by_time_added_asc">older first</string>
    <string name="sort_by_time_added_desc">newer first</string>
    <string name="sort_by_duration_asc">shorter first</string>
    <string name="sort_by_duration_desc">longer first</string>
    <string name="check_all_playlists">All playlists</string>
    <string name="check_only_enabled_playlists">Only enabled</string>
    <string name="yashlang_import_playlists">YaShlang: import channels and playlists</string>
    <string name="import_data">Import data</string>
    <string name="export_json">JSON</string>
    <string name="yashlang_import">YaShlang: import</string>
    <string name="export_to_clipboard">Export to clipboard</string>
    <string name="load_file">Load file</string>
    <string name="loaded_file">Loaded file</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="json_file_path">JSON file path</string>
    <string name="json_file_path_with_playlists_data">JSON file path with playlists data</string>
    <string name="load_from_clipboard">Load from clipboard</string>
    <string name="loaded_from_clipboard_ok">Loaded from clipboard: ok</string>
    <string name="clipboard_is_empty">Clipboard is empty</string>
    <string name="no_playlists_to_import">No playlists to import</string>
    <string name="export_dir_location">Export dir location: %s</string>
    <string name="select_streams">Select streams</string>
    <string name="no_streams_for_video_item">No streams for this video</string>
    <string name="configure_moar">More settings</string>
    <string name="tab_item_video_quality">Video quality</string>
    <string name="yashlang_configure_moar">YaShlang: more settings</string>
    <string name="vid_stream_select_max_res">Max resolution</string>
    <string name="vid_stream_select_min_res">Min resolution</string>
    <string name="vid_stream_select_custom">Custom resolution</string>
    <string name="vid_stream_select_last_chosen">Last chosen (on player screen)</string>
    <string name="vid_stream_prefer_higher">higher resolution</string>
    <string name="vid_stream_prefer_lower">lower resolution</string>
    <string name="vid_stream_prefer_if_not_available">If not available, prefer</string>
    <string name="download_streams">Download</string>
    <string name="yashlang_stream_cache">YaShlang: stream cache downloads</string>
    <string name="downloads">💾 Stream downloads</string>
    <string name="no_active_downloads">No active downloads</string>
    <string name="no_finished_downloads">No finished downloads</string>
    <string name="start_all">Start all</string>
    <string name="pause_all">Pause all</string>
    <string name="tab_item_stream_cache_download">Downloads</string>
    <string name="tab_item_stream_cache">Downloaded</string>
    <string name="delete_stream_title">Delete stream?</string>
    <string name="delete_stream_message">Stream cache file would be deleted from local storage</string>
    <string name="stream_is_deleted">Stream cache is deleted</string>
    <string name="unit_bytes">bytes</string>
    <string name="unit_kb">KB</string>
    <string name="unit_mb">MB</string>
    <string name="unit_gb">GB</string>
    <string name="stream_state_init">Init</string>
    <string name="stream_state_progress">Progress</string>
    <string name="stream_state_paused">Paused</string>
    <string name="stream_state_error">Error</string>
    <string name="stream_state_done">Done</string>
    <string name="stream_cache_file_missing">Stream cache file missing</string>
    <string name="unmanaged_files_in_cache_dir">Check cache dir for unmanaged files</string>
    <string name="no_unmanaged_cache_files">No unmanaged files in cache dir</string>
    <string name="deleted_unmanaged_files">Deleted %c unmanaged files (%s) from cache</string>
    <string name="video_thumb_cache_none">Do not cache</string>
    <string name="video_thumb_cache_all">Cache all</string>
    <string name="video_thumb_cache_with_offline_streams">Cache only for videos with offline streams</string>
    <string name="thumb_cache_dir_path">Thumb cache dir path</string>
    <string name="thumb_cache_fs_size">Cache size on disk</string>
    <string name="thumb_cache_clear">Clear thumb cache</string>
    <string name="video_thumb_cache">Video thumbs</string>
    <string name="playlist_thumb_cache">Playlist thumbs</string>
    <string name="cache_always_on">Always cache</string>
    <string name="no_active_import_tasks">No active import playlist tasks</string>
    <string name="cancel_all_live">Cancel all live</string>
    <string name="dismiss_all_finished">Dismiss all finished</string>
</resources>