<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/video_thumb_cache" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/vid_thumb_cache_none_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:checked="true"
                android:text="@string/video_thumb_cache_none" />

            <RadioButton
                android:id="@+id/vid_thumb_cache_all_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/video_thumb_cache_all" />

            <RadioButton
                android:id="@+id/vid_thumb_cache_with_offline_streams_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/video_thumb_cache_with_offline_streams" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/playlist_thumb_cache" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/cache_always_on" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/thumb_cache_dir_path" />
        <TextView
            android:id="@+id/thumb_cache_dir_path_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/thumb_cache_fs_size" />
        <TextView
            android:id="@+id/thumb_cache_fs_size_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/thumb_cache_clear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/thumb_cache_clear" />

    </LinearLayout>
</ScrollView>
