<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="[this feature is experimental, exported data format WILL change]"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/export_markdown_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/export_markdown" />
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <RadioButton
                android:id="@+id/export_ytdl_script_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_ytdl_script" />
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <RadioButton
                android:id="@+id/export_json_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_json" />
        </RadioGroup>

        <Switch
            android:id="@+id/export_playlist_list_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/export_playlist_list" />
        <Switch
            android:id="@+id/export_only_enabled_playlists1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/export_only_enabled_playlists" />

        <Switch
            android:id="@+id/export_profiles_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="false"
            android:text="@string/export_profiles" />

        <Switch
            android:id="@+id/export_playlist_items_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="false"
            android:text="@string/export_playlist_items" />

        <Switch
            android:id="@+id/export_only_enabled_playlists2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/export_only_enabled_playlists" />

        <Switch
            android:id="@+id/export_skip_blocked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="false"
            android:text="@string/export_skip_blocked" />

        <Switch
            android:id="@+id/export_playlist_items_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/export_playlist_items_names" />

        <Switch
            android:id="@+id/export_playlist_items_urls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/export_playlist_items_urls" />

        <Switch
            android:id="@+id/export_starred_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/export_starred" />

        <Switch
            android:id="@+id/export_blacklist_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:checked="false"
            android:text="@string/export_blacklist" />

        <TextView
            android:id="@+id/save_dir_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/export_to_file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/export_to_file" />
        <Button
            android:id="@+id/export_to_clipboard_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/export_to_clipboard" />

        <ProgressBar
            android:id="@+id/save_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/saved_ok_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/save_error_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>