<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_playlist_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist" />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/playlist_list_is_empty" />

        <Button
            android:id="@+id/add_recommended_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_recommended_playlists" />
    </LinearLayout>

    <EditText
        android:id="@+id/filter_playlist_list_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:hint="@string/filter"
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
