<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/enable_all_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_all" />
    <Button
        android:id="@+id/disable_all_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disable_all" />
    <Button
        android:id="@+id/disable_yt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disble_all_yt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
