<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_all_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_all" />
    <Button
        android:id="@+id/pause_all_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_all" />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_active_downloads" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stream_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
