<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[this feature is experimental, exported data format WILL change]"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/load_file_path_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/json_file_path"/>

            <ImageButton
                android:id="@+id/open_file_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/json_file_path_with_playlists_data"/>

        <TextView
            android:id="@+id/export_dir_location_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/export_dir_location"/>

        <Button
            android:id="@+id/load_file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/load_file" />
        <Button
            android:id="@+id/load_from_clipboard_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/load_from_clipboard" />

        <ProgressBar
            android:id="@+id/load_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loaded_ok_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/load_error_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <Button
            android:id="@+id/import_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/import_data" />
    </LinearLayout>
</ScrollView>